gcc/testsuite/rust/rustc/ui/traits/traits-issue-71136.rs
struct Foo(u8);

#[derive(Clone)]
struct FooHolster {
    the_foos: Vec<Foo>, // { dg-error ".E0277." "" { target *-*-* } }
}

fn main() {}

